docs/1.0rc2/_sources/api/gammapy.modeling.models.PowerLaw2SpectralModel.rst.txt
PowerLaw2SpectralModel
======================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: PowerLaw2SpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~PowerLaw2SpectralModel.amplitude
      ~PowerLaw2SpectralModel.covariance
      ~PowerLaw2SpectralModel.default_parameters
      ~PowerLaw2SpectralModel.emax
      ~PowerLaw2SpectralModel.emin
      ~PowerLaw2SpectralModel.frozen
      ~PowerLaw2SpectralModel.index
      ~PowerLaw2SpectralModel.is_norm_spectral_model
      ~PowerLaw2SpectralModel.parameters
      ~PowerLaw2SpectralModel.tag
      ~PowerLaw2SpectralModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~PowerLaw2SpectralModel.__call__
      ~PowerLaw2SpectralModel.copy
      ~PowerLaw2SpectralModel.energy_flux
      ~PowerLaw2SpectralModel.energy_flux_error
      ~PowerLaw2SpectralModel.evaluate
      ~PowerLaw2SpectralModel.evaluate_error
      ~PowerLaw2SpectralModel.evaluate_integral
      ~PowerLaw2SpectralModel.freeze
      ~PowerLaw2SpectralModel.from_dict
      ~PowerLaw2SpectralModel.from_parameters
      ~PowerLaw2SpectralModel.integral
      ~PowerLaw2SpectralModel.integral_error
      ~PowerLaw2SpectralModel.inverse
      ~PowerLaw2SpectralModel.inverse_all
      ~PowerLaw2SpectralModel.plot
      ~PowerLaw2SpectralModel.plot_error
      ~PowerLaw2SpectralModel.reassign
      ~PowerLaw2SpectralModel.reference_fluxes
      ~PowerLaw2SpectralModel.spectral_index
      ~PowerLaw2SpectralModel.to_dict
      ~PowerLaw2SpectralModel.unfreeze

   .. rubric:: Attributes Documentation

   .. autoattribute:: amplitude
   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: emax
   .. autoattribute:: emin
   .. autoattribute:: frozen
   .. autoattribute:: index
   .. autoattribute:: is_norm_spectral_model
   .. autoattribute:: parameters
   .. autoattribute:: tag
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: evaluate_integral
   .. automethod:: freeze
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: inverse_all
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: reassign
   .. automethod:: reference_fluxes
   .. automethod:: spectral_index
   .. automethod:: to_dict
   .. automethod:: unfreeze
